need to fix series scanning

--- a/game_data/Dual-Paths-Windows.yaml
+++ b/game_data/Dual-Paths-Windows.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Complete level 9
   GS: '200'
   Guide: false
-  Number of Gamers: 29
-  Percentage of Gamers: 94%
-  Ratio: 3.56
-  TA: '712'
+  Number of Gamers: 93
+  Percentage of Gamers: 99%
+  Ratio: 1.18
+  TA: '237'
   Tags: []
 - Achievement Name: 11 levels completed
   Description: Complete level 11
   GS: '200'
   Guide: false
-  Number of Gamers: 29
-  Percentage of Gamers: 94%
-  Ratio: 3.56
-  TA: '712'
+  Number of Gamers: 93
+  Percentage of Gamers: 99%
+  Ratio: 1.18
+  TA: '237'
   Tags: []
 - Achievement Name: 12 levels completed
   Description: Complete level 12
   GS: '200'
   Guide: false
-  Number of Gamers: 29
-  Percentage of Gamers: 94%
-  Ratio: 3.56
-  TA: '712'
+  Number of Gamers: 93
+  Percentage of Gamers: 99%
+  Ratio: 1.18
+  TA: '237'
   Tags: []
 - Achievement Name: 13 levels completed
   Description: Complete level 13
   GS: '200'
   Guide: false
-  Number of Gamers: 29
-  Percentage of Gamers: 94%
-  Ratio: 3.56
-  TA: '712'
+  Number of Gamers: 93
+  Percentage of Gamers: 99%
+  Ratio: 1.18
+  TA: '237'
   Tags: []
 - Achievement Name: 14 levels completed
   Description: Complete level 14
   GS: '200'
   Guide: false
-  Number of Gamers: 29
-  Percentage of Gamers: 94%
-  Ratio: 3.56
-  TA: '712'
+  Number of Gamers: 93
+  Percentage of Gamers: 99%
+  Ratio: 1.18
+  TA: '237'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Complete the first level
   GS: '100'
   Guide: false
-  Number of Gamers: 161
+  Number of Gamers: 168
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Complete level 2
   GS: '100'
   Guide: false
-  Number of Gamers: 159
+  Number of Gamers: 166
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -77,7 +77,7 @@ Base Game Achievements:
   Description: Complete level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 159
+  Number of Gamers: 166
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Complete level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 156
+  Number of Gamers: 163
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Complete level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 154
+  Number of Gamers: 162
   Percentage of Gamers: 96%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.01
+  TA: '101'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,8 +113,8 @@ Base Game Achievements:
   Description: Complete level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 151
-  Percentage of Gamers: 94%
+  Number of Gamers: 156
+  Percentage of Gamers: 93%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -125,10 +125,10 @@ Base Game Achievements:
   Description: Complete level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 149
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 153
+  Percentage of Gamers: 91%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -137,8 +137,8 @@ Base Game Achievements:
   Description: Complete level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 140
-  Percentage of Gamers: 87%
+  Number of Gamers: 144
+  Percentage of Gamers: 86%
   Ratio: 1.07
   TA: '107'
   Tags:
@@ -149,8 +149,8 @@ Base Game Achievements:
   Description: Complete level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 140
-  Percentage of Gamers: 87%
+  Number of Gamers: 144
+  Percentage of Gamers: 86%
   Ratio: 1.07
   TA: '107'
   Tags:
@@ -161,31 +161,31 @@ Base Game Achievements:
   Description: Complete level 40
   GS: '100'
   Guide: false
-  Number of Gamers: 140
-  Percentage of Gamers: 87%
+  Number of Gamers: 143
+  Percentage of Gamers: 85%
   Ratio: 1.07
   TA: '107'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.024
-Base TA: 2048
+Base Ratio: 1.0225
+Base TA: 2045
 Delisted: false
 Developer: Yume Game Studio
 Game Name: Dual Paths (Windows)
 Genres: Platformer
 Install Size: 46.0
-Number of Completions: 29
-Number of Gamers: 161
+Number of Completions: 83
+Number of Gamers: 168
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.87
-Overall TA: 5610
+Overall Ratio: 1.0766666666666667
+Overall TA: 3230
 PDU: 0
-Percentage Completed: 18.01
+Percentage Completed: 49.4
 Publisher: Yume Game Studio
 Release Date: 30 May 2025
 Server Closure: false
@@ -195,7 +195,7 @@ Update Achievements:
   Description: Complete level 3
   GS: '200'
   Guide: false
-  Number of Gamers: 156
+  Number of Gamers: 163
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '203'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Complete level 4
   GS: '200'
   Guide: false
-  Number of Gamers: 156
+  Number of Gamers: 163
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '203'
@@ -219,10 +219,10 @@ Update Achievements:
   Description: Complete level 6
   GS: '200'
   Guide: false
-  Number of Gamers: 155
+  Number of Gamers: 162
   Percentage of Gamers: 96%
-  Ratio: 1.02
-  TA: '204'
+  Ratio: 1.01
+  TA: '203'
   Tags:
   - Offline Mode
   - Single Player
@@ -231,10 +231,10 @@ Update Achievements:
   Description: Complete level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 155
+  Number of Gamers: 162
   Percentage of Gamers: 96%
-  Ratio: 1.02
-  TA: '204'
+  Ratio: 1.01
+  TA: '203'
   Tags:
   - Offline Mode
   - Single Player
@@ -243,10 +243,10 @@ Update Achievements:
   Description: Complete level 8
   GS: '200'
   Guide: false
-  Number of Gamers: 155
+  Number of Gamers: 162
   Percentage of Gamers: 96%
-  Ratio: 1.02
-  TA: '204'
+  Ratio: 1.01
+  TA: '203'
   Tags:
   - Offline Mode
   - Single Player
