--- a/game_data/RTYPE-FINAL-2-Asian.yaml
+++ b/game_data/RTYPE-FINAL-2-Asian.yaml
@@ -899,9 +899,9 @@ Base Game Achievements:
     to unlock it.
   GS: '10'
   Guide: false
-  Number of Gamers: 41
+  Number of Gamers: 42
   Percentage of Gamers: 24%
-  Ratio: 2.05
+  Ratio: 2.02
   TA: '20'
   Tags:
   - Offline Game Mode
@@ -956,8 +956,8 @@ Base Game Achievements:
   Tags:
   - Offline Game Mode
   - Single Player
-Base Ratio: 3.5
-Base TA: 3780
+Base Ratio: 3.852777777777778
+Base TA: 4161
 Delisted: false
 Developer: Granzella
 Game Name: R-Type Final 2 (Asian)
@@ -969,8 +969,8 @@ Overall Completion Time:
 - 179
 - 180
 Overall GS: 2950
-Overall Ratio: 3.14135593220339
-Overall TA: 9267
+Overall Ratio: 3.270508474576271
+Overall TA: 9648
 PDU: 0
 Percentage Completed: 0.58
 Publisher: Granzella
@@ -1009,8 +1009,8 @@ Update Achievements:
   Guide: false
   Number of Gamers: 1
   Percentage of Gamers: 1%
-  Ratio: 3.62
-  TA: '36'
+  Ratio: 13.15
+  TA: '131'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -1021,8 +1021,8 @@ Update Achievements:
   Guide: false
   Number of Gamers: 1
   Percentage of Gamers: 1%
-  Ratio: 3.62
-  TA: '108'
+  Ratio: 13.15
+  TA: '394'
   Tags:
   - Offline Game Mode
   - Single Player
