--- a/game_data/Tofu-Dream-Xbox-One.yaml
+++ b/game_data/Tofu-Dream-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Jump 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 78
-  Percentage of Gamers: 89%
-  Ratio: 1.56
-  TA: '313'
+  Number of Gamers: 151
+  Percentage of Gamers: 99%
+  Ratio: 1.26
+  TA: '252'
   Tags: []
 - Achievement Name: Jump 10
   Description: Jump 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 78
-  Percentage of Gamers: 89%
-  Ratio: 1.56
-  TA: '313'
+  Number of Gamers: 151
+  Percentage of Gamers: 99%
+  Ratio: 1.26
+  TA: '252'
   Tags: []
 - Achievement Name: Jump 15
   Description: Jump 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 78
-  Percentage of Gamers: 89%
-  Ratio: 1.56
-  TA: '313'
+  Number of Gamers: 151
+  Percentage of Gamers: 99%
+  Ratio: 1.26
+  TA: '252'
   Tags: []
 - Achievement Name: Jump 20
   Description: Jump 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 78
-  Percentage of Gamers: 89%
-  Ratio: 1.56
-  TA: '313'
+  Number of Gamers: 151
+  Percentage of Gamers: 99%
+  Ratio: 1.26
+  TA: '252'
   Tags: []
 - Achievement Name: Jump 30
   Description: Jump 30 times
   GS: '200'
   Guide: false
-  Number of Gamers: 78
-  Percentage of Gamers: 89%
-  Ratio: 1.56
-  TA: '313'
+  Number of Gamers: 151
+  Percentage of Gamers: 99%
+  Ratio: 1.26
+  TA: '252'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 315
+  Number of Gamers: 321
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 314
+  Number of Gamers: 320
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -77,8 +77,8 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 309
-  Percentage of Gamers: 94%
+  Number of Gamers: 314
+  Percentage of Gamers: 93%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 308
+  Number of Gamers: 313
   Percentage of Gamers: 93%
   Ratio: 1.03
   TA: '103'
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 307
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 312
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,10 +113,10 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 307
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 312
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -125,10 +125,10 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 307
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 312
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -137,10 +137,10 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 307
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 312
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
@@ -149,8 +149,8 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 313
-  Percentage of Gamers: 95%
+  Number of Gamers: 319
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -161,31 +161,31 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 307
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '103'
+  Number of Gamers: 312
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '104'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.0255
-Base TA: 2051
+Base Ratio: 1.0305
+Base TA: 2061
 Delisted: false
 Developer: 2dragontails
 Game Name: Tofu Dream (Xbox One)
 Genres: Platformer
 Install Size: 406.0
-Number of Completions: 85
-Number of Gamers: 330
+Number of Completions: 143
+Number of Gamers: 338
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.2053333333333334
-Overall TA: 3616
+Overall Ratio: 1.107
+Overall TA: 3321
 PDU: 0
-Percentage Completed: 25.76
+Percentage Completed: 42.31
 Publisher: 2dragontails
 Release Date: 21 May 2025
 Server Closure: false
@@ -195,10 +195,10 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 327
+  Number of Gamers: 334
   Percentage of Gamers: 99%
   Ratio: 1.0
-  TA: '200'
+  TA: '201'
   Tags:
   - Offline Mode
   - Single Player
@@ -207,10 +207,10 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 314
+  Number of Gamers: 320
   Percentage of Gamers: 95%
   Ratio: 1.02
-  TA: '204'
+  TA: '205'
   Tags:
   - Offline Mode
   - Single Player
@@ -219,10 +219,10 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 308
+  Number of Gamers: 313
   Percentage of Gamers: 93%
   Ratio: 1.03
-  TA: '206'
+  TA: '207'
   Tags:
   - Offline Mode
   - Single Player
@@ -231,10 +231,10 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 306
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '207'
+  Number of Gamers: 311
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '208'
   Tags:
   - Offline Mode
   - Single Player
@@ -243,10 +243,10 @@ Update Achievements:
   Description: Beat level 39
   GS: '200'
   Guide: false
-  Number of Gamers: 306
-  Percentage of Gamers: 93%
-  Ratio: 1.03
-  TA: '207'
+  Number of Gamers: 311
+  Percentage of Gamers: 92%
+  Ratio: 1.04
+  TA: '208'
   Tags:
   - Offline Mode
   - Single Player
