--- a/game_data/Yooperlite-Xbox-One.yaml
+++ b/game_data/Yooperlite-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 132
-  Percentage of Gamers: 99%
-  Ratio: 1.48
-  TA: '297'
+  Number of Gamers: 226
+  Percentage of Gamers: 100%
+  Ratio: 1.22
+  TA: '245'
   Tags: []
 - Achievement Name: Level 7
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 132
+  Number of Gamers: 224
   Percentage of Gamers: 99%
-  Ratio: 1.48
-  TA: '297'
+  Ratio: 1.23
+  TA: '246'
   Tags: []
 - Achievement Name: Level 16
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 132
-  Percentage of Gamers: 99%
-  Ratio: 1.48
-  TA: '297'
+  Number of Gamers: 219
+  Percentage of Gamers: 96%
+  Ratio: 1.24
+  TA: '249'
   Tags: []
 - Achievement Name: Level 21
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 132
-  Percentage of Gamers: 99%
-  Ratio: 1.48
-  TA: '297'
+  Number of Gamers: 218
+  Percentage of Gamers: 96%
+  Ratio: 1.24
+  TA: '249'
   Tags: []
 - Achievement Name: Level 39
   Description: Beat level 39
   GS: '200'
   Guide: false
-  Number of Gamers: 128
-  Percentage of Gamers: 96%
-  Ratio: 1.5
-  TA: '300'
+  Number of Gamers: 215
+  Percentage of Gamers: 95%
+  Ratio: 1.25
+  TA: '251'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 442
+  Number of Gamers: 456
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 440
+  Number of Gamers: 455
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -77,8 +77,8 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 431
-  Percentage of Gamers: 97%
+  Number of Gamers: 443
+  Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -89,8 +89,8 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 431
-  Percentage of Gamers: 97%
+  Number of Gamers: 443
+  Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -101,7 +101,7 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 423
+  Number of Gamers: 436
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -113,7 +113,7 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 422
+  Number of Gamers: 436
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -125,7 +125,7 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 422
+  Number of Gamers: 436
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -137,10 +137,10 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 420
+  Number of Gamers: 433
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 439
+  Number of Gamers: 454
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '100'
@@ -161,7 +161,7 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 422
+  Number of Gamers: 436
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -169,23 +169,23 @@ Base Game Achievements:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.0085
-Base TA: 2017
+Base Ratio: 1.009
+Base TA: 2018
 Delisted: false
 Developer: Kitnet Hostage
 Game Name: Yooperlite (Xbox One)
 Genres: Platformer
 Install Size: 390.0
-Number of Completions: 126
-Number of Gamers: 446
+Number of Completions: 213
+Number of Gamers: 461
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.1683333333333332
-Overall TA: 3505
+Overall Ratio: 1.086
+Overall TA: 3258
 PDU: 0
-Percentage Completed: 28.25
+Percentage Completed: 46.2
 Publisher: 2dragontails
 Release Date: 02 April 2025
 Server Closure: false
@@ -195,7 +195,7 @@ Update Achievements:
   Description: Collect 10 fireflies
   GS: '200'
   Guide: false
-  Number of Gamers: 445
+  Number of Gamers: 459
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '200'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Collect 20 fireflies
   GS: '200'
   Guide: false
-  Number of Gamers: 441
+  Number of Gamers: 455
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -219,7 +219,7 @@ Update Achievements:
   Description: Collect 30 fireflies
   GS: '200'
   Guide: false
-  Number of Gamers: 438
+  Number of Gamers: 452
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '201'
@@ -231,7 +231,7 @@ Update Achievements:
   Description: Collect 40 fireflies
   GS: '200'
   Guide: false
-  Number of Gamers: 438
+  Number of Gamers: 452
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '201'
@@ -243,7 +243,7 @@ Update Achievements:
   Description: Collect 50 fireflies
   GS: '200'
   Guide: true
-  Number of Gamers: 437
+  Number of Gamers: 451
   Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '202'
