--- a/game_data/Aircraft-RC2.yaml
+++ b/game_data/Aircraft-RC2.yaml
@@ -1,16 +1,16 @@
 Add On Achievements: []
 Base Completion Time:
+- 11
 - 12
-- 13
 Base GS: 1000
 Base Game Achievements:
 - Achievement Name: In flight
   Description: Fly two minute
   GS: '10'
   Guide: false
-  Number of Gamers: 47
+  Number of Gamers: 50
   Percentage of Gamers: 89%
-  Ratio: 1.06
+  Ratio: 1.05
   TA: '10'
   Tags:
   - Offline Game Mode
@@ -19,9 +19,9 @@ Base Game Achievements:
   Description: Landing a plane
   GS: '15'
   Guide: false
-  Number of Gamers: 28
-  Percentage of Gamers: 53%
-  Ratio: 1.37
+  Number of Gamers: 31
+  Percentage of Gamers: 55%
+  Ratio: 1.34
   TA: '20'
   Tags:
   - Offline Mode
@@ -32,9 +32,9 @@ Base Game Achievements:
   GS: '25'
   Guide: true
   Number of Gamers: 9
-  Percentage of Gamers: 17%
-  Ratio: 2.42
-  TA: '60'
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -42,10 +42,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with Spad -7
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -53,10 +53,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with CL-415
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -64,10 +64,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with Corsair
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -75,10 +75,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with DH-112
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -86,10 +86,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with AC-130
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -97,10 +97,10 @@ Base Game Achievements:
   Description: Win gold medal in Free flight with F-22
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -109,9 +109,9 @@ Base Game Achievements:
   GS: '25'
   Guide: false
   Number of Gamers: 8
-  Percentage of Gamers: 15%
-  Ratio: 2.57
-  TA: '64'
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -119,10 +119,10 @@ Base Game Achievements:
   Description: Win all gold medals in Free flight
   GS: '75'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '222'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '212'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -130,10 +130,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with Training
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -141,10 +141,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with Spad-7
   GS: '25'
   Guide: false
-  Number of Gamers: 11
-  Percentage of Gamers: 21%
-  Ratio: 2.19
-  TA: '54'
+  Number of Gamers: 13
+  Percentage of Gamers: 23%
+  Ratio: 2.07
+  TA: '51'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -152,10 +152,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with CL-415
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -163,21 +163,21 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with Corsair
   GS: '25'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 15%
-  Ratio: 2.57
-  TA: '64'
+  Number of Gamers: 9
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Champion DH-112
   Description: Win gold medal in Challenge with DH-112
   GS: '25'
-  Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Guide: true
+  Number of Gamers: 9
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -185,10 +185,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with AC-130
   GS: '25'
   Guide: true
-  Number of Gamers: 8
-  Percentage of Gamers: 15%
-  Ratio: 2.57
-  TA: '64'
+  Number of Gamers: 9
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -196,10 +196,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with F-22
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 9
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -207,10 +207,10 @@ Base Game Achievements:
   Description: Win gold medal in Challenge with Extra-300
   GS: '25'
   Guide: false
-  Number of Gamers: 8
-  Percentage of Gamers: 15%
-  Ratio: 2.57
-  TA: '64'
+  Number of Gamers: 9
+  Percentage of Gamers: 16%
+  Ratio: 2.49
+  TA: '62'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -218,10 +218,10 @@ Base Game Achievements:
   Description: Win all gold medals in Challenge
   GS: '70'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '208'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '197'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -229,10 +229,10 @@ Base Game Achievements:
   Description: Win gold medal in chase with the Training
   GS: '25'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Number of Gamers: 8
+  Percentage of Gamers: 14%
+  Ratio: 2.64
+  TA: '66'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -240,10 +240,10 @@ Base Game Achievements:
   Description: Win gold medal in chase with the Spad-7
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -251,10 +251,10 @@ Base Game Achievements:
   Description: Win gold medal in chase with the CL-415
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -262,10 +262,10 @@ Base Game Achievements:
   Description: Win gold medal in chase with the Corsair
   GS: '25'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '74'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -274,9 +274,9 @@ Base Game Achievements:
   GS: '25'
   Guide: false
   Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -285,9 +285,9 @@ Base Game Achievements:
   GS: '25'
   Guide: false
   Number of Gamers: 7
-  Percentage of Gamers: 13%
-  Ratio: 2.75
-  TA: '68'
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '70'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -295,10 +295,10 @@ Base Game Achievements:
   Description: Win all the gold medals in Chase
   GS: '60'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '178'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '169'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -306,10 +306,10 @@ Base Game Achievements:
   Description: Win all the medal in Free flight -Challenge-Chase
   GS: '130'
   Guide: false
-  Number of Gamers: 6
-  Percentage of Gamers: 11%
-  Ratio: 2.97
-  TA: '386'
+  Number of Gamers: 7
+  Percentage of Gamers: 12%
+  Ratio: 2.82
+  TA: '367'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -317,10 +317,10 @@ Base Game Achievements:
   Description: After take off rest on and make fuel on fuel zone
   GS: '25'
   Guide: true
-  Number of Gamers: 13
-  Percentage of Gamers: 25%
-  Ratio: 2.01
-  TA: '50'
+  Number of Gamers: 16
+  Percentage of Gamers: 29%
+  Ratio: 1.87
+  TA: '46'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -328,10 +328,10 @@ Base Game Achievements:
   Description: Land on reserve water to refill empty water tank
   GS: '25'
   Guide: true
-  Number of Gamers: 17
-  Percentage of Gamers: 32%
-  Ratio: 1.76
-  TA: '44'
+  Number of Gamers: 19
+  Percentage of Gamers: 34%
+  Ratio: 1.71
+  TA: '42'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -339,10 +339,10 @@ Base Game Achievements:
   Description: Win your first medal
   GS: '20'
   Guide: false
-  Number of Gamers: 31
-  Percentage of Gamers: 58%
-  Ratio: 1.3
-  TA: '26'
+  Number of Gamers: 34
+  Percentage of Gamers: 61%
+  Ratio: 1.28
+  TA: '25'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -350,31 +350,31 @@ Base Game Achievements:
   Description: Cross the barn with any plane
   GS: '20'
   Guide: true
-  Number of Gamers: 19
-  Percentage of Gamers: 36%
-  Ratio: 1.67
-  TA: '33'
+  Number of Gamers: 21
+  Percentage of Gamers: 38%
+  Ratio: 1.63
+  TA: '32'
   Tags:
   - Offline Mode
   - Single Player
   - Collectable
-Base Ratio: 2.671
-Base TA: 2671
+Base Ratio: 2.565
+Base TA: 2565
 Delisted: false
 Developer: Gefly-studio
 Game Name: Aircraft RC-2 (Windows)
 Genres: Simulation, Aerial
 Install Size: 541.0
-Number of Completions: 6
-Number of Gamers: 53
+Number of Completions: 7
+Number of Gamers: 56
 Overall Completion Time:
+- 11
 - 12
-- 13
 Overall GS: 1000
-Overall Ratio: 2.671
-Overall TA: 2671
+Overall Ratio: 2.565
+Overall TA: 2565
 PDU: 0
-Percentage Completed: 11.32
+Percentage Completed: 12.5
 Publisher: Gefly-studio
 Release Date: 28 September 2018
 Server Closure: false
