--- a/game_data/Crate-Fang-Windows.yaml
+++ b/game_data/Crate-Fang-Windows.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Push boxes 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 83%
-  Ratio: 3.49
-  TA: '698'
+  Number of Gamers: 93
+  Percentage of Gamers: 100%
+  Ratio: 1.14
+  TA: '228'
   Tags: []
 - Achievement Name: Push boxes 10
   Description: Push boxes 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 83%
-  Ratio: 3.49
-  TA: '698'
+  Number of Gamers: 93
+  Percentage of Gamers: 100%
+  Ratio: 1.14
+  TA: '228'
   Tags: []
 - Achievement Name: Push boxes 15
   Description: Push boxes 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 83%
-  Ratio: 3.49
-  TA: '698'
+  Number of Gamers: 93
+  Percentage of Gamers: 100%
+  Ratio: 1.14
+  TA: '228'
   Tags: []
 - Achievement Name: Push boxes 20
   Description: Push boxes 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 83%
-  Ratio: 3.49
-  TA: '698'
+  Number of Gamers: 93
+  Percentage of Gamers: 100%
+  Ratio: 1.14
+  TA: '228'
   Tags: []
 - Achievement Name: Push boxes 25
   Description: Push boxes 25 times
   GS: '200'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 83%
-  Ratio: 3.49
-  TA: '698'
+  Number of Gamers: 93
+  Percentage of Gamers: 100%
+  Ratio: 1.14
+  TA: '228'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,8 +53,8 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: false
-  Number of Gamers: 150
-  Percentage of Gamers: 98%
+  Number of Gamers: 155
+  Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
   Tags:
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 148
+  Number of Gamers: 153
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -77,8 +77,8 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 147
-  Percentage of Gamers: 96%
+  Number of Gamers: 152
+  Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -89,10 +89,10 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 145
-  Percentage of Gamers: 95%
-  Ratio: 1.02
-  TA: '102'
+  Number of Gamers: 151
+  Percentage of Gamers: 96%
+  Ratio: 1.01
+  TA: '101'
   Tags:
   - Offline Mode
   - Single Player
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 144
+  Number of Gamers: 148
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,10 +113,10 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 144
+  Number of Gamers: 148
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -125,8 +125,8 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 142
-  Percentage of Gamers: 93%
+  Number of Gamers: 147
+  Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -137,8 +137,8 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: false
-  Number of Gamers: 141
-  Percentage of Gamers: 92%
+  Number of Gamers: 147
+  Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '103'
   Tags:
@@ -149,8 +149,8 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 147
-  Percentage of Gamers: 96%
+  Number of Gamers: 152
+  Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -161,10 +161,10 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 144
+  Number of Gamers: 148
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -176,16 +176,16 @@ Developer: 2dragontails
 Game Name: Crate Fang (Windows)
 Genres: Puzzle
 Install Size: 97.0
-Number of Completions: 59
-Number of Gamers: 153
+Number of Completions: 89
+Number of Gamers: 157
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.842
-Overall TA: 5526
+Overall Ratio: 1.0576666666666668
+Overall TA: 3173
 PDU: 0
-Percentage Completed: 38.56
+Percentage Completed: 56.69
 Publisher: 2dragontails
 Release Date: 11 June 2025
 Server Closure: false
@@ -195,7 +195,7 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 151
+  Number of Gamers: 156
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '200'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 148
+  Number of Gamers: 153
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '202'
@@ -219,10 +219,10 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 145
-  Percentage of Gamers: 95%
-  Ratio: 1.02
-  TA: '204'
+  Number of Gamers: 152
+  Percentage of Gamers: 97%
+  Ratio: 1.01
+  TA: '203'
   Tags:
   - Offline Mode
   - Single Player
@@ -231,10 +231,10 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 145
-  Percentage of Gamers: 95%
-  Ratio: 1.02
-  TA: '204'
+  Number of Gamers: 151
+  Percentage of Gamers: 96%
+  Ratio: 1.01
+  TA: '203'
   Tags:
   - Offline Mode
   - Single Player
@@ -243,8 +243,8 @@ Update Achievements:
   Description: Beat level 39
   GS: '200'
   Guide: false
-  Number of Gamers: 142
-  Percentage of Gamers: 93%
+  Number of Gamers: 147
+  Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '206'
   Tags:
