--- a/game_data/How-2-Escape.yaml
+++ b/game_data/How-2-Escape.yaml
@@ -1,14 +1,14 @@
 Add On Achievements: []
 Base Completion Time:
-- 2.0
 - 3.0
+- 4.0
 Base GS: 1000
 Base Game Achievements:
 - Achievement Name: Escape game rookie
   Description: Complete the storage
   GS: '25'
-  Guide: false
-  Number of Gamers: 284
+  Guide: true
+  Number of Gamers: 385
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '25'
@@ -20,9 +20,9 @@ Base Game Achievements:
   Description: Complete the lounge without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 207
-  Percentage of Gamers: 73%
-  Ratio: 1.17
+  Number of Gamers: 286
+  Percentage of Gamers: 74%
+  Ratio: 1.16
   TA: '29'
   Tags:
   - Offline Game Mode
@@ -31,9 +31,9 @@ Base Game Achievements:
   Description: Complete the lounge without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 139
-  Percentage of Gamers: 49%
-  Ratio: 1.42
+  Number of Gamers: 192
+  Percentage of Gamers: 50%
+  Ratio: 1.41
   TA: '35'
   Tags:
   - Offline Game Mode
@@ -42,10 +42,10 @@ Base Game Achievements:
   Description: Complete the bunk without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 182
-  Percentage of Gamers: 64%
-  Ratio: 1.24
-  TA: '31'
+  Number of Gamers: 257
+  Percentage of Gamers: 67%
+  Ratio: 1.22
+  TA: '30'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -53,10 +53,10 @@ Base Game Achievements:
   Description: Complete the bunk without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 140
-  Percentage of Gamers: 49%
-  Ratio: 1.42
-  TA: '35'
+  Number of Gamers: 200
+  Percentage of Gamers: 52%
+  Ratio: 1.38
+  TA: '34'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -64,9 +64,9 @@ Base Game Achievements:
   Description: Complete the engine without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 175
-  Percentage of Gamers: 61%
-  Ratio: 1.27
+  Number of Gamers: 249
+  Percentage of Gamers: 65%
+  Ratio: 1.24
   TA: '31'
   Tags:
   - Offline Game Mode
@@ -75,10 +75,10 @@ Base Game Achievements:
   Description: Complete the engine without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 132
-  Percentage of Gamers: 46%
-  Ratio: 1.46
-  TA: '36'
+  Number of Gamers: 189
+  Percentage of Gamers: 49%
+  Ratio: 1.42
+  TA: '35'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -86,10 +86,10 @@ Base Game Achievements:
   Description: Complete the kitchen without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 143
-  Percentage of Gamers: 50%
-  Ratio: 1.4
-  TA: '35'
+  Number of Gamers: 198
+  Percentage of Gamers: 51%
+  Ratio: 1.39
+  TA: '34'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -97,10 +97,10 @@ Base Game Achievements:
   Description: Complete the kitchen without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 98
+  Number of Gamers: 130
   Percentage of Gamers: 34%
-  Ratio: 1.7
-  TA: '42'
+  Ratio: 1.72
+  TA: '43'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -108,10 +108,10 @@ Base Game Achievements:
   Description: Complete the desk without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 105
-  Percentage of Gamers: 37%
-  Ratio: 1.64
-  TA: '41'
+  Number of Gamers: 158
+  Percentage of Gamers: 41%
+  Ratio: 1.56
+  TA: '39'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -119,10 +119,10 @@ Base Game Achievements:
   Description: Complete the desk without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 82
-  Percentage of Gamers: 29%
-  Ratio: 1.86
-  TA: '46'
+  Number of Gamers: 117
+  Percentage of Gamers: 30%
+  Ratio: 1.81
+  TA: '45'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -130,10 +130,10 @@ Base Game Achievements:
   Description: Complete the locomotive without dying
   GS: '25'
   Guide: false
-  Number of Gamers: 98
-  Percentage of Gamers: 34%
-  Ratio: 1.7
-  TA: '42'
+  Number of Gamers: 147
+  Percentage of Gamers: 38%
+  Ratio: 1.61
+  TA: '40'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -141,10 +141,10 @@ Base Game Achievements:
   Description: Complete the locomotive without using a clue
   GS: '25'
   Guide: false
-  Number of Gamers: 67
-  Percentage of Gamers: 24%
-  Ratio: 2.05
-  TA: '51'
+  Number of Gamers: 99
+  Percentage of Gamers: 26%
+  Ratio: 1.97
+  TA: '49'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -152,10 +152,10 @@ Base Game Achievements:
   Description: Complete the game
   GS: '100'
   Guide: false
-  Number of Gamers: 84
-  Percentage of Gamers: 29%
-  Ratio: 1.83
-  TA: '183'
+  Number of Gamers: 131
+  Percentage of Gamers: 34%
+  Ratio: 1.71
+  TA: '171'
   Tags:
   - Offline Mode
   - Single Player
@@ -164,10 +164,10 @@ Base Game Achievements:
   Description: Complete the game without using a clue
   GS: '100'
   Guide: false
-  Number of Gamers: 55
-  Percentage of Gamers: 19%
-  Ratio: 2.27
-  TA: '227'
+  Number of Gamers: 82
+  Percentage of Gamers: 21%
+  Ratio: 2.16
+  TA: '216'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -175,9 +175,9 @@ Base Game Achievements:
   Description: Pet the cat
   GS: '25'
   Guide: false
-  Number of Gamers: 185
-  Percentage of Gamers: 65%
-  Ratio: 1.23
+  Number of Gamers: 262
+  Percentage of Gamers: 68%
+  Ratio: 1.21
   TA: '30'
   Tags:
   - Offline Game Mode
@@ -186,9 +186,9 @@ Base Game Achievements:
   Description: Find all the coins of the engine
   GS: '25'
   Guide: false
-  Number of Gamers: 160
+  Number of Gamers: 218
   Percentage of Gamers: 56%
-  Ratio: 1.33
+  Ratio: 1.32
   TA: '33'
   Tags:
   - Offline Mode
@@ -198,10 +198,10 @@ Base Game Achievements:
   Description: Find all the coins of the desk
   GS: '25'
   Guide: false
-  Number of Gamers: 67
-  Percentage of Gamers: 24%
-  Ratio: 2.05
-  TA: '51'
+  Number of Gamers: 101
+  Percentage of Gamers: 26%
+  Ratio: 1.95
+  TA: '48'
   Tags:
   - Offline Mode
   - Single Player
@@ -210,10 +210,10 @@ Base Game Achievements:
   Description: Find all the coins of the locomotive
   GS: '25'
   Guide: false
-  Number of Gamers: 56
-  Percentage of Gamers: 20%
-  Ratio: 2.25
-  TA: '56'
+  Number of Gamers: 83
+  Percentage of Gamers: 22%
+  Ratio: 2.15
+  TA: '53'
   Tags:
   - Offline Mode
   - Single Player
@@ -222,9 +222,9 @@ Base Game Achievements:
   Description: Play a wonderful melody with the piano
   GS: '25'
   Guide: false
-  Number of Gamers: 238
+  Number of Gamers: 325
   Percentage of Gamers: 84%
-  Ratio: 1.09
+  Ratio: 1.08
   TA: '27'
   Tags:
   - Offline Game Mode
@@ -233,9 +233,9 @@ Base Game Achievements:
   Description: Complete the lounge under 20 minutes
   GS: '58'
   Guide: false
-  Number of Gamers: 95
+  Number of Gamers: 128
   Percentage of Gamers: 33%
-  Ratio: 1.72
+  Ratio: 1.73
   TA: '100'
   Tags:
   - Offline Mode
@@ -245,10 +245,10 @@ Base Game Achievements:
   Description: Complete the bunk under 10 minutes
   GS: '58'
   Guide: false
-  Number of Gamers: 55
-  Percentage of Gamers: 19%
-  Ratio: 2.27
-  TA: '131'
+  Number of Gamers: 77
+  Percentage of Gamers: 20%
+  Ratio: 2.23
+  TA: '129'
   Tags:
   - Offline Mode
   - Single Player
@@ -257,10 +257,10 @@ Base Game Achievements:
   Description: Complete the engine under 20 minutes
   GS: '58'
   Guide: false
-  Number of Gamers: 79
-  Percentage of Gamers: 28%
-  Ratio: 1.89
-  TA: '109'
+  Number of Gamers: 112
+  Percentage of Gamers: 29%
+  Ratio: 1.85
+  TA: '107'
   Tags:
   - Offline Mode
   - Single Player
@@ -269,7 +269,7 @@ Base Game Achievements:
   Description: Complete the kitchen under 15 minutes
   GS: '58'
   Guide: false
-  Number of Gamers: 56
+  Number of Gamers: 76
   Percentage of Gamers: 20%
   Ratio: 2.25
   TA: '130'
@@ -281,10 +281,10 @@ Base Game Achievements:
   Description: Complete the desk under 35 minutes
   GS: '58'
   Guide: false
-  Number of Gamers: 57
+  Number of Gamers: 79
   Percentage of Gamers: 20%
-  Ratio: 2.23
-  TA: '129'
+  Ratio: 2.2
+  TA: '128'
   Tags:
   - Offline Mode
   - Single Player
@@ -293,34 +293,34 @@ Base Game Achievements:
   Description: Complete the locomotive under 45 minutes
   GS: '60'
   Guide: false
-  Number of Gamers: 51
-  Percentage of Gamers: 18%
-  Ratio: 2.35
-  TA: '141'
+  Number of Gamers: 74
+  Percentage of Gamers: 19%
+  Ratio: 2.28
+  TA: '136'
   Tags:
   - Offline Mode
   - Single Player
   - Time/Date
-Base Ratio: 1.826
-Base TA: 1826
+Base Ratio: 1.777
+Base TA: 1777
 Delisted: false
 Developer: BreakFirst Games
 Game Name: How 2 Escape
 Genres: Puzzle
 Install Size: 1510.0
-Number of Completions: 45
-Number of Gamers: 285
+Number of Completions: 62
+Number of Gamers: 386
 Overall Completion Time:
-- 2.0
 - 3.0
+- 4.0
 Overall GS: 1000
-Overall Ratio: 1.826
-Overall TA: 1826
+Overall Ratio: 1.777
+Overall TA: 1777
 PDU: 0
-Percentage Completed: 15.79
-Publisher: Just For Games
+Percentage Completed: 16.06
+Publisher: Maximum Entertainment
 Release Date: 31 August 2023
 Server Closure: false
-Site Rating: 4.43
+Site Rating: 4.19
 Update Achievements: []
 Walkthrough: false
