--- a/game_data/MrSlime-in-Dungeon-Windows.yaml
+++ b/game_data/MrSlime-in-Dungeon-Windows.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Jump 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 121
-  Percentage of Gamers: 100%
-  Ratio: 1.76
-  TA: '353'
+  Number of Gamers: 229
+  Percentage of Gamers: 96%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 10
   Description: Jump 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 120
-  Percentage of Gamers: 99%
-  Ratio: 1.78
-  TA: '356'
+  Number of Gamers: 229
+  Percentage of Gamers: 96%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 15
   Description: Jump 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 119
-  Percentage of Gamers: 98%
-  Ratio: 1.78
-  TA: '356'
+  Number of Gamers: 228
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '275'
   Tags: []
 - Achievement Name: Jump 20
   Description: Jump 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 119
-  Percentage of Gamers: 98%
-  Ratio: 1.78
-  TA: '356'
+  Number of Gamers: 228
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '275'
   Tags: []
 - Achievement Name: Jump 30
   Description: Jump 30 times
   GS: '200'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 98%
-  Ratio: 1.78
-  TA: '356'
+  Number of Gamers: 228
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '275'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: true
-  Number of Gamers: 714
+  Number of Gamers: 721
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -65,7 +65,7 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 706
+  Number of Gamers: 714
   Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '101'
@@ -77,7 +77,7 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 699
+  Number of Gamers: 708
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 695
+  Number of Gamers: 701
   Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '101'
@@ -101,8 +101,8 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 691
-  Percentage of Gamers: 96%
+  Number of Gamers: 697
+  Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -113,8 +113,8 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 691
-  Percentage of Gamers: 96%
+  Number of Gamers: 697
+  Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -125,8 +125,8 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 691
-  Percentage of Gamers: 96%
+  Number of Gamers: 696
+  Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -137,7 +137,7 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 688
+  Number of Gamers: 693
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 705
+  Number of Gamers: 714
   Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '101'
@@ -161,31 +161,31 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 691
-  Percentage of Gamers: 96%
+  Number of Gamers: 697
+  Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.0123333333333333
-Base TA: 3037
+Base Ratio: 1.012
+Base TA: 3036
 Delisted: false
 Developer: Kitnet Hostage
 Game Name: Mr.Slime in Dungeon (Windows)
 Genres: Platformer
 Install Size: 64.0
-Number of Completions: 116
-Number of Gamers: 722
+Number of Completions: 225
+Number of Gamers: 731
 Overall Completion Time:
 - 0.0
 - 2.0
 Overall GS: 4000
-Overall Ratio: 1.2035
-Overall TA: 4814
+Overall Ratio: 1.10225
+Overall TA: 4409
 PDU: 0
-Percentage Completed: 16.07
+Percentage Completed: 30.78
 Publisher: 2dragontails
 Release Date: 13 December 2024
 Server Closure: false
@@ -195,7 +195,7 @@ Update Achievements:
   Description: Collect 10 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 717
+  Number of Gamers: 724
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '200'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Collect 20 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 716
+  Number of Gamers: 723
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '200'
@@ -219,7 +219,7 @@ Update Achievements:
   Description: Collect 30 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 714
+  Number of Gamers: 721
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -231,7 +231,7 @@ Update Achievements:
   Description: Collect 40 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 714
+  Number of Gamers: 721
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -243,7 +243,7 @@ Update Achievements:
   Description: Collect 50 coins
   GS: '200'
   Guide: true
-  Number of Gamers: 714
+  Number of Gamers: 721
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -255,7 +255,7 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 705
+  Number of Gamers: 713
   Percentage of Gamers: 98%
   Ratio: 1.01
   TA: '202'
@@ -267,10 +267,10 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 700
+  Number of Gamers: 708
   Percentage of Gamers: 97%
   Ratio: 1.01
-  TA: '203'
+  TA: '202'
   Tags:
   - Offline Mode
   - Single Player
@@ -279,7 +279,7 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 688
+  Number of Gamers: 697
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '204'
@@ -291,8 +291,8 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 684
-  Percentage of Gamers: 95%
+  Number of Gamers: 690
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '205'
   Tags:
@@ -303,7 +303,7 @@ Update Achievements:
   Description: Enter the chest at the final level
   GS: '200'
   Guide: true
-  Number of Gamers: 680
+  Number of Gamers: 685
   Percentage of Gamers: 94%
   Ratio: 1.03
   TA: '206'
