--- a/game_data/MrSlime-in-Dungeon-Xbox-One.yaml
+++ b/game_data/MrSlime-in-Dungeon-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Jump 5 times
   GS: '200'
   Guide: false
-  Number of Gamers: 210
-  Percentage of Gamers: 99%
-  Ratio: 1.75
-  TA: '350'
+  Number of Gamers: 405
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 10
   Description: Jump 10 times
   GS: '200'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 98%
-  Ratio: 1.75
-  TA: '351'
+  Number of Gamers: 405
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 15
   Description: Jump 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 98%
-  Ratio: 1.75
-  TA: '351'
+  Number of Gamers: 404
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 20
   Description: Jump 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 98%
-  Ratio: 1.75
-  TA: '351'
+  Number of Gamers: 404
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 - Achievement Name: Jump 30
   Description: Jump 30 times
   GS: '200'
   Guide: false
-  Number of Gamers: 208
-  Percentage of Gamers: 98%
-  Ratio: 1.75
-  TA: '351'
+  Number of Gamers: 404
+  Percentage of Gamers: 95%
+  Ratio: 1.37
+  TA: '274'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,7 +53,7 @@ Base Game Achievements:
   Description: Beat level 5
   GS: '100'
   Guide: true
-  Number of Gamers: 1259
+  Number of Gamers: 1290
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -65,8 +65,8 @@ Base Game Achievements:
   Description: Beat level 10
   GS: '100'
   Guide: false
-  Number of Gamers: 1237
-  Percentage of Gamers: 98%
+  Number of Gamers: 1264
+  Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
   Tags:
@@ -77,7 +77,7 @@ Base Game Achievements:
   Description: Beat level 15
   GS: '100'
   Guide: false
-  Number of Gamers: 1221
+  Number of Gamers: 1247
   Percentage of Gamers: 96%
   Ratio: 1.01
   TA: '101'
@@ -89,7 +89,7 @@ Base Game Achievements:
   Description: Beat level 20
   GS: '100'
   Guide: false
-  Number of Gamers: 1203
+  Number of Gamers: 1229
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '102'
@@ -101,8 +101,8 @@ Base Game Achievements:
   Description: Beat level 25
   GS: '100'
   Guide: false
-  Number of Gamers: 1200
-  Percentage of Gamers: 95%
+  Number of Gamers: 1226
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -113,8 +113,8 @@ Base Game Achievements:
   Description: Beat level 30
   GS: '100'
   Guide: false
-  Number of Gamers: 1198
-  Percentage of Gamers: 95%
+  Number of Gamers: 1224
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -125,8 +125,8 @@ Base Game Achievements:
   Description: Beat level 35
   GS: '100'
   Guide: false
-  Number of Gamers: 1198
-  Percentage of Gamers: 95%
+  Number of Gamers: 1224
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '102'
   Tags:
@@ -137,10 +137,10 @@ Base Game Achievements:
   Description: Beat level 40
   GS: '100'
   Guide: true
-  Number of Gamers: 1195
+  Number of Gamers: 1221
   Percentage of Gamers: 94%
-  Ratio: 1.02
-  TA: '102'
+  Ratio: 1.03
+  TA: '103'
   Tags:
   - Offline Mode
   - Single Player
@@ -149,7 +149,7 @@ Base Game Achievements:
   Description: Beat level 12
   GS: '100'
   Guide: false
-  Number of Gamers: 1235
+  Number of Gamers: 1262
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '101'
@@ -161,41 +161,41 @@ Base Game Achievements:
   Description: Beat level 27
   GS: '100'
   Guide: false
-  Number of Gamers: 1200
-  Percentage of Gamers: 95%
+  Number of Gamers: 1226
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '102'
   Tags:
   - Offline Mode
   - Single Player
   - Main Storyline
-Base Ratio: 1.014
-Base TA: 3042
+Base Ratio: 1.0143333333333333
+Base TA: 3043
 Delisted: false
 Developer: Kitnet Hostage
 Game Name: Mr.Slime in Dungeon (Xbox One)
 Genres: Platformer
 Install Size: 373.0
-Number of Completions: 203
-Number of Gamers: 1267
+Number of Completions: 402
+Number of Gamers: 1299
 Overall Completion Time:
 - 0.0
 - 2.0
 Overall GS: 4000
-Overall Ratio: 1.199
-Overall TA: 4796
+Overall Ratio: 1.10325
+Overall TA: 4413
 PDU: 0
-Percentage Completed: 16.02
+Percentage Completed: 30.95
 Publisher: 2dragontails
 Release Date: 13 December 2024
 Server Closure: false
-Site Rating: 2.4
+Site Rating: 2.41
 Update Achievements:
 - Achievement Name: 10 coins
   Description: Collect 10 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 1255
+  Number of Gamers: 1286
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '200'
@@ -207,7 +207,7 @@ Update Achievements:
   Description: Collect 20 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 1252
+  Number of Gamers: 1283
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -219,7 +219,7 @@ Update Achievements:
   Description: Collect 30 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 1251
+  Number of Gamers: 1282
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -231,7 +231,7 @@ Update Achievements:
   Description: Collect 40 coins
   GS: '200'
   Guide: false
-  Number of Gamers: 1250
+  Number of Gamers: 1281
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -243,7 +243,7 @@ Update Achievements:
   Description: Collect 50 coins
   GS: '200'
   Guide: true
-  Number of Gamers: 1250
+  Number of Gamers: 1281
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '201'
@@ -255,7 +255,7 @@ Update Achievements:
   Description: Beat level 2
   GS: '200'
   Guide: false
-  Number of Gamers: 1232
+  Number of Gamers: 1265
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '202'
@@ -267,10 +267,10 @@ Update Achievements:
   Description: Beat level 7
   GS: '200'
   Guide: false
-  Number of Gamers: 1229
+  Number of Gamers: 1262
   Percentage of Gamers: 97%
   Ratio: 1.01
-  TA: '203'
+  TA: '202'
   Tags:
   - Offline Mode
   - Single Player
@@ -279,8 +279,8 @@ Update Achievements:
   Description: Beat level 16
   GS: '200'
   Guide: false
-  Number of Gamers: 1198
-  Percentage of Gamers: 95%
+  Number of Gamers: 1227
+  Percentage of Gamers: 94%
   Ratio: 1.02
   TA: '205'
   Tags:
@@ -291,10 +291,10 @@ Update Achievements:
   Description: Beat level 21
   GS: '200'
   Guide: false
-  Number of Gamers: 1183
+  Number of Gamers: 1210
   Percentage of Gamers: 93%
   Ratio: 1.03
-  TA: '206'
+  TA: '207'
   Tags:
   - Offline Mode
   - Single Player
@@ -303,7 +303,7 @@ Update Achievements:
   Description: Enter the chest at the final level
   GS: '200'
   Guide: false
-  Number of Gamers: 1177
+  Number of Gamers: 1204
   Percentage of Gamers: 93%
   Ratio: 1.03
   TA: '207'
