--- a/game_data/My-Recycling-Center.yaml
+++ b/game_data/My-Recycling-Center.yaml
@@ -1,16 +1,16 @@
 Add On Achievements: []
 Base Completion Time:
+- 13
 - 14
-- 15
 Base GS: 1000
 Base Game Achievements:
 - Achievement Name: Freedom of Press
   Description: These compactors will eat everything.
   GS: '25'
   Guide: true
-  Number of Gamers: 91
-  Percentage of Gamers: 64%
-  Ratio: 1.23
+  Number of Gamers: 109
+  Percentage of Gamers: 66%
+  Ratio: 1.22
   TA: '30'
   Tags:
   - Offline Game Mode
@@ -19,9 +19,9 @@ Base Game Achievements:
   Description: Keep your yard clean and look for small debris.
   GS: '25'
   Guide: true
-  Number of Gamers: 106
-  Percentage of Gamers: 74%
-  Ratio: 1.15
+  Number of Gamers: 126
+  Percentage of Gamers: 77%
+  Ratio: 1.13
   TA: '28'
   Tags:
   - Offline Game Mode
@@ -30,8 +30,8 @@ Base Game Achievements:
   Description: Some trash items are wild and furry.
   GS: '25'
   Guide: true
-  Number of Gamers: 112
-  Percentage of Gamers: 78%
+  Number of Gamers: 132
+  Percentage of Gamers: 80%
   Ratio: 1.11
   TA: '27'
   Tags:
@@ -41,31 +41,31 @@ Base Game Achievements:
   Description: It might get hot when you throw explosives into a compactor.
   GS: '50'
   Guide: true
-  Number of Gamers: 71
-  Percentage of Gamers: 50%
-  Ratio: 1.38
-  TA: '69'
+  Number of Gamers: 88
+  Percentage of Gamers: 54%
+  Ratio: 1.36
+  TA: '68'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Bull's Eye
   Description: Something with a bull's eye goes into the trash.
   GS: '25'
-  Guide: false
-  Number of Gamers: 54
-  Percentage of Gamers: 38%
-  Ratio: 1.62
-  TA: '40'
+  Guide: true
+  Number of Gamers: 80
+  Percentage of Gamers: 49%
+  Ratio: 1.42
+  TA: '35'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Last Day on the Beach
   Description: A nice day at the beach, sit down in one of these.
   GS: '25'
-  Guide: false
-  Number of Gamers: 69
-  Percentage of Gamers: 48%
-  Ratio: 1.41
+  Guide: true
+  Number of Gamers: 83
+  Percentage of Gamers: 51%
+  Ratio: 1.4
   TA: '35'
   Tags:
   - Offline Game Mode
@@ -74,9 +74,9 @@ Base Game Achievements:
   Description: This instrument will play its last note soon.
   GS: '25'
   Guide: true
-  Number of Gamers: 96
-  Percentage of Gamers: 67%
-  Ratio: 1.19
+  Number of Gamers: 116
+  Percentage of Gamers: 71%
+  Ratio: 1.18
   TA: '29'
   Tags:
   - Offline Game Mode
@@ -85,9 +85,9 @@ Base Game Achievements:
   Description: The table from the bar needs to go.
   GS: '25'
   Guide: true
-  Number of Gamers: 77
-  Percentage of Gamers: 54%
-  Ratio: 1.33
+  Number of Gamers: 93
+  Percentage of Gamers: 57%
+  Ratio: 1.32
   TA: '33'
   Tags:
   - Offline Game Mode
@@ -95,11 +95,11 @@ Base Game Achievements:
 - Achievement Name: Play it again
   Description: This music box will play for the last time.
   GS: '25'
-  Guide: false
-  Number of Gamers: 47
-  Percentage of Gamers: 33%
-  Ratio: 1.71
-  TA: '42'
+  Guide: true
+  Number of Gamers: 66
+  Percentage of Gamers: 40%
+  Ratio: 1.57
+  TA: '39'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -107,10 +107,10 @@ Base Game Achievements:
   Description: Chemicals and paint should not go into normal trash.
   GS: '25'
   Guide: true
-  Number of Gamers: 48
-  Percentage of Gamers: 34%
-  Ratio: 1.69
-  TA: '42'
+  Number of Gamers: 65
+  Percentage of Gamers: 40%
+  Ratio: 1.58
+  TA: '39'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -118,10 +118,10 @@ Base Game Achievements:
   Description: This cart should not be discarded here, but whatever.
   GS: '25'
   Guide: true
-  Number of Gamers: 34
-  Percentage of Gamers: 24%
-  Ratio: 2.02
-  TA: '50'
+  Number of Gamers: 52
+  Percentage of Gamers: 32%
+  Ratio: 1.77
+  TA: '44'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -129,8 +129,8 @@ Base Game Achievements:
   Description: Complete the beginner's tutorial.
   GS: '25'
   Guide: false
-  Number of Gamers: 138
-  Percentage of Gamers: 97%
+  Number of Gamers: 164
+  Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '25'
   Tags:
@@ -140,21 +140,21 @@ Base Game Achievements:
   Description: When a container gets dirty, use the pressure washer to clean it.
   GS: '25'
   Guide: true
-  Number of Gamers: 84
-  Percentage of Gamers: 59%
-  Ratio: 1.29
-  TA: '32'
+  Number of Gamers: 103
+  Percentage of Gamers: 63%
+  Ratio: 1.25
+  TA: '31'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Full House
   Description: Take it to the full capacity.
   GS: '100'
-  Guide: false
-  Number of Gamers: 35
-  Percentage of Gamers: 24%
-  Ratio: 2.02
-  TA: '202'
+  Guide: true
+  Number of Gamers: 53
+  Percentage of Gamers: 32%
+  Ratio: 1.75
+  TA: '175'
   Tags:
   - Offline Mode
   - Single Player
@@ -163,21 +163,21 @@ Base Game Achievements:
   Description: What's your favorite color?
   GS: '25'
   Guide: true
-  Number of Gamers: 51
-  Percentage of Gamers: 36%
-  Ratio: 1.65
-  TA: '41'
+  Number of Gamers: 69
+  Percentage of Gamers: 42%
+  Ratio: 1.53
+  TA: '38'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Full Diversity
   Description: Unlock every available trash type.
   GS: '100'
-  Guide: false
-  Number of Gamers: 32
-  Percentage of Gamers: 22%
-  Ratio: 2.08
-  TA: '208'
+  Guide: true
+  Number of Gamers: 51
+  Percentage of Gamers: 31%
+  Ratio: 1.78
+  TA: '178'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -186,21 +186,21 @@ Base Game Achievements:
     way.
   GS: '25'
   Guide: true
-  Number of Gamers: 76
-  Percentage of Gamers: 53%
-  Ratio: 1.35
-  TA: '33'
+  Number of Gamers: 96
+  Percentage of Gamers: 59%
+  Ratio: 1.3
+  TA: '32'
   Tags:
   - Offline Game Mode
   - Single Player
 - Achievement Name: Used the Barrel Compactor
   Description: Buy, set up and use the barrel compactor.
   GS: '25'
-  Guide: false
-  Number of Gamers: 46
-  Percentage of Gamers: 32%
-  Ratio: 1.75
-  TA: '43'
+  Guide: true
+  Number of Gamers: 64
+  Percentage of Gamers: 39%
+  Ratio: 1.59
+  TA: '39'
   Tags:
   - Offline Mode
   - Single Player
@@ -208,11 +208,11 @@ Base Game Achievements:
 - Achievement Name: Used the Shredder
   Description: Buy, set up and use the garden waste shredder.
   GS: '25'
-  Guide: false
-  Number of Gamers: 46
-  Percentage of Gamers: 32%
-  Ratio: 1.75
-  TA: '43'
+  Guide: true
+  Number of Gamers: 61
+  Percentage of Gamers: 37%
+  Ratio: 1.63
+  TA: '40'
   Tags:
   - Offline Mode
   - Single Player
@@ -221,10 +221,10 @@ Base Game Achievements:
   Description: Buy and use the barrow to transport some trash.
   GS: '25'
   Guide: true
-  Number of Gamers: 78
-  Percentage of Gamers: 55%
-  Ratio: 1.34
-  TA: '33'
+  Number of Gamers: 96
+  Percentage of Gamers: 59%
+  Ratio: 1.3
+  TA: '32'
   Tags:
   - Offline Mode
   - Single Player
@@ -233,10 +233,10 @@ Base Game Achievements:
   Description: Fill all available slots in the shop with goods for sale.
   GS: '100'
   Guide: false
-  Number of Gamers: 52
-  Percentage of Gamers: 36%
-  Ratio: 1.62
-  TA: '162'
+  Number of Gamers: 70
+  Percentage of Gamers: 43%
+  Ratio: 1.52
+  TA: '152'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -244,10 +244,10 @@ Base Game Achievements:
   Description: Find and offer one of the most valuable items for sale in the shop.
   GS: '100'
   Guide: true
-  Number of Gamers: 27
-  Percentage of Gamers: 19%
-  Ratio: 2.23
-  TA: '223'
+  Number of Gamers: 37
+  Percentage of Gamers: 23%
+  Ratio: 2.12
+  TA: '212'
   Tags:
   - Offline Game Mode
   - Single Player
@@ -255,10 +255,10 @@ Base Game Achievements:
   Description: Unlock the trailer license.
   GS: '50'
   Guide: true
-  Number of Gamers: 65
-  Percentage of Gamers: 45%
-  Ratio: 1.46
-  TA: '73'
+  Number of Gamers: 88
+  Percentage of Gamers: 54%
+  Ratio: 1.36
+  TA: '68'
   Tags:
   - Offline Mode
   - Single Player
@@ -267,10 +267,10 @@ Base Game Achievements:
   Description: Unlock the commercial truck license.
   GS: '50'
   Guide: false
-  Number of Gamers: 50
-  Percentage of Gamers: 35%
-  Ratio: 1.65
-  TA: '82'
+  Number of Gamers: 71
+  Percentage of Gamers: 43%
+  Ratio: 1.51
+  TA: '75'
   Tags:
   - Offline Mode
   - Single Player
@@ -278,34 +278,34 @@ Base Game Achievements:
 - Achievement Name: Full Backpack
   Description: Fill up your backpack with 8 trash objects.
   GS: '25'
-  Guide: false
-  Number of Gamers: 53
-  Percentage of Gamers: 37%
-  Ratio: 1.59
-  TA: '39'
+  Guide: true
+  Number of Gamers: 71
+  Percentage of Gamers: 43%
+  Ratio: 1.51
+  TA: '37'
   Tags:
   - Offline Game Mode
   - Single Player
-Base Ratio: 1.664
-Base TA: 1664
+Base Ratio: 1.541
+Base TA: 1541
 Delisted: false
 Developer: Darius Bode
 Game Name: My Recycling Center
 Genres: Simulation
 Install Size: 6330.0
-Number of Completions: 15
-Number of Gamers: 143
+Number of Completions: 24
+Number of Gamers: 164
 Overall Completion Time:
+- 13
 - 14
-- 15
 Overall GS: 1000
-Overall Ratio: 1.664
-Overall TA: 1664
+Overall Ratio: 1.541
+Overall TA: 1541
 PDU: 0
-Percentage Completed: 10.49
+Percentage Completed: 14.63
 Publisher: Darius Bode
 Release Date: 25 June 2025
 Server Closure: false
-Site Rating: 3.12
+Site Rating: 2.75
 Update Achievements: []
 Walkthrough: false
