--- a/game_data/Mystic-Pathways-Crystal-Quest-Xbox-One.yaml
+++ b/game_data/Mystic-Pathways-Crystal-Quest-Xbox-One.yaml
@@ -3,46 +3,46 @@ Add On Achievements:
   Description: Collect 20 crystals
   GS: '200'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 11%
-  Ratio: 3.33
-  TA: '666'
+  Number of Gamers: 194
+  Percentage of Gamers: 93%
+  Ratio: 1.08
+  TA: '217'
   Tags: []
 - Achievement Name: Here and there
   Description: Use 10 portals
   GS: '200'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 11%
-  Ratio: 3.33
-  TA: '666'
+  Number of Gamers: 185
+  Percentage of Gamers: 89%
+  Ratio: 1.11
+  TA: '222'
   Tags: []
 - Achievement Name: Vital Energy
   Description: Activate 18 altars
   GS: '200'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 11%
-  Ratio: 3.33
-  TA: '666'
+  Number of Gamers: 188
+  Percentage of Gamers: 90%
+  Ratio: 1.1
+  TA: '221'
   Tags: []
 - Achievement Name: In the middle of the road there was a stone
   Description: Swap 40 tiles
   GS: '200'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 11%
-  Ratio: 3.33
-  TA: '666'
+  Number of Gamers: 197
+  Percentage of Gamers: 95%
+  Ratio: 1.08
+  TA: '216'
   Tags: []
 - Achievement Name: Dusting off
   Description: Rotate pieces 50 times
   GS: '200'
   Guide: false
-  Number of Gamers: 4
-  Percentage of Gamers: 11%
-  Ratio: 3.33
-  TA: '666'
+  Number of Gamers: 202
+  Percentage of Gamers: 97%
+  Ratio: 1.06
+  TA: '213'
   Tags: []
 Base Completion Time:
 - 0.0
@@ -53,8 +53,8 @@ Base Game Achievements:
   Description: Collect the first crystal
   GS: '10'
   Guide: false
-  Number of Gamers: 124
-  Percentage of Gamers: 89%
+  Number of Gamers: 249
+  Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '10'
   Tags:
@@ -65,9 +65,9 @@ Base Game Achievements:
   Description: Collect 4 crystals
   GS: '20'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.02
+  Number of Gamers: 245
+  Percentage of Gamers: 96%
+  Ratio: 1.01
   TA: '20'
   Tags:
   - Offline Mode
@@ -77,10 +77,10 @@ Base Game Achievements:
   Description: Collect 8 crystals
   GS: '30'
   Guide: false
-  Number of Gamers: 116
-  Percentage of Gamers: 83%
-  Ratio: 1.04
-  TA: '31'
+  Number of Gamers: 242
+  Percentage of Gamers: 95%
+  Ratio: 1.01
+  TA: '30'
   Tags:
   - Offline Mode
   - Single Player
@@ -89,10 +89,10 @@ Base Game Achievements:
   Description: Collect 12 crystals
   GS: '40'
   Guide: false
-  Number of Gamers: 114
-  Percentage of Gamers: 82%
-  Ratio: 1.05
-  TA: '42'
+  Number of Gamers: 238
+  Percentage of Gamers: 93%
+  Ratio: 1.02
+  TA: '41'
   Tags:
   - Offline Mode
   - Single Player
@@ -101,10 +101,10 @@ Base Game Achievements:
   Description: Collect 16 crystals
   GS: '90'
   Guide: false
-  Number of Gamers: 113
-  Percentage of Gamers: 81%
-  Ratio: 1.05
-  TA: '94'
+  Number of Gamers: 235
+  Percentage of Gamers: 92%
+  Ratio: 1.03
+  TA: '93'
   Tags:
   - Offline Mode
   - Single Player
@@ -113,10 +113,10 @@ Base Game Achievements:
   Description: Use a portal for the first time
   GS: '15'
   Guide: false
-  Number of Gamers: 106
-  Percentage of Gamers: 76%
-  Ratio: 1.09
-  TA: '16'
+  Number of Gamers: 223
+  Percentage of Gamers: 87%
+  Ratio: 1.06
+  TA: '15'
   Tags:
   - Offline Mode
   - Single Player
@@ -125,10 +125,10 @@ Base Game Achievements:
   Description: Use 3 portals
   GS: '30'
   Guide: false
-  Number of Gamers: 105
-  Percentage of Gamers: 76%
-  Ratio: 1.09
-  TA: '32'
+  Number of Gamers: 222
+  Percentage of Gamers: 87%
+  Ratio: 1.06
+  TA: '31'
   Tags:
   - Offline Mode
   - Single Player
@@ -137,10 +137,10 @@ Base Game Achievements:
   Description: Use 6 portals
   GS: '90'
   Guide: false
-  Number of Gamers: 105
-  Percentage of Gamers: 76%
-  Ratio: 1.09
-  TA: '98'
+  Number of Gamers: 221
+  Percentage of Gamers: 87%
+  Ratio: 1.06
+  TA: '95'
   Tags:
   - Offline Mode
   - Single Player
@@ -149,9 +149,9 @@ Base Game Achievements:
   Description: Activate an altar for the first time
   GS: '10'
   Guide: false
-  Number of Gamers: 122
-  Percentage of Gamers: 88%
-  Ratio: 1.01
+  Number of Gamers: 248
+  Percentage of Gamers: 97%
+  Ratio: 1.0
   TA: '10'
   Tags:
   - Offline Mode
@@ -161,9 +161,9 @@ Base Game Achievements:
   Description: Activate 5 altars
   GS: '20'
   Guide: false
-  Number of Gamers: 115
-  Percentage of Gamers: 83%
-  Ratio: 1.04
+  Number of Gamers: 241
+  Percentage of Gamers: 95%
+  Ratio: 1.01
   TA: '20'
   Tags:
   - Offline Mode
@@ -173,10 +173,10 @@ Base Game Achievements:
   Description: Activate 10 altars
   GS: '35'
   Guide: false
-  Number of Gamers: 110
-  Percentage of Gamers: 79%
-  Ratio: 1.07
-  TA: '37'
+  Number of Gamers: 229
+  Percentage of Gamers: 90%
+  Ratio: 1.04
+  TA: '36'
   Tags:
   - Offline Mode
   - Single Player
@@ -185,10 +185,10 @@ Base Game Achievements:
   Description: Activate 15 altars
   GS: '90'
   Guide: false
-  Number of Gamers: 108
-  Percentage of Gamers: 78%
-  Ratio: 1.07
-  TA: '96'
+  Number of Gamers: 226
+  Percentage of Gamers: 89%
+  Ratio: 1.05
+  TA: '94'
   Tags:
   - Offline Mode
   - Single Player
@@ -197,9 +197,9 @@ Base Game Achievements:
   Description: Swap tiles for the first time
   GS: '10'
   Guide: false
-  Number of Gamers: 120
-  Percentage of Gamers: 86%
-  Ratio: 1.01
+  Number of Gamers: 248
+  Percentage of Gamers: 97%
+  Ratio: 1.0
   TA: '10'
   Tags:
   - Offline Mode
@@ -209,9 +209,9 @@ Base Game Achievements:
   Description: Swap 10 tiles
   GS: '20'
   Guide: false
-  Number of Gamers: 119
-  Percentage of Gamers: 86%
-  Ratio: 1.02
+  Number of Gamers: 245
+  Percentage of Gamers: 96%
+  Ratio: 1.01
   TA: '20'
   Tags:
   - Offline Mode
@@ -221,10 +221,10 @@ Base Game Achievements:
   Description: Swap 20 tiles
   GS: '35'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.03
-  TA: '36'
+  Number of Gamers: 245
+  Percentage of Gamers: 96%
+  Ratio: 1.01
+  TA: '35'
   Tags:
   - Offline Mode
   - Single Player
@@ -233,10 +233,10 @@ Base Game Achievements:
   Description: Swap 30 tiles
   GS: '90'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.03
-  TA: '92'
+  Number of Gamers: 243
+  Percentage of Gamers: 95%
+  Ratio: 1.01
+  TA: '91'
   Tags:
   - Offline Mode
   - Single Player
@@ -245,9 +245,9 @@ Base Game Achievements:
   Description: Rotate tiles 12 times
   GS: '20'
   Guide: false
-  Number of Gamers: 120
-  Percentage of Gamers: 86%
-  Ratio: 1.01
+  Number of Gamers: 248
+  Percentage of Gamers: 97%
+  Ratio: 1.0
   TA: '20'
   Tags:
   - Offline Mode
@@ -257,9 +257,9 @@ Base Game Achievements:
   Description: Rotate tiles 24 times
   GS: '30'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.02
+  Number of Gamers: 245
+  Percentage of Gamers: 96%
+  Ratio: 1.01
   TA: '30'
   Tags:
   - Offline Mode
@@ -269,10 +269,10 @@ Base Game Achievements:
   Description: Rotate tiles 36 times
   GS: '90'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.02
-  TA: '92'
+  Number of Gamers: 245
+  Percentage of Gamers: 96%
+  Ratio: 1.01
+  TA: '90'
   Tags:
   - Offline Mode
   - Single Player
@@ -281,9 +281,9 @@ Base Game Achievements:
   Description: Use hint for the first time
   GS: '15'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.03
+  Number of Gamers: 243
+  Percentage of Gamers: 95%
+  Ratio: 1.01
   TA: '15'
   Tags:
   - Offline Game Mode
@@ -292,10 +292,10 @@ Base Game Achievements:
   Description: Use hint 5 times
   GS: '90'
   Guide: false
-  Number of Gamers: 114
-  Percentage of Gamers: 82%
-  Ratio: 1.06
-  TA: '95'
+  Number of Gamers: 237
+  Percentage of Gamers: 93%
+  Ratio: 1.02
+  TA: '92'
   Tags:
   - Offline Mode
   - Single Player
@@ -304,9 +304,9 @@ Base Game Achievements:
   Description: Cross a 2-way tile for the first time
   GS: '30'
   Guide: false
-  Number of Gamers: 118
-  Percentage of Gamers: 85%
-  Ratio: 1.02
+  Number of Gamers: 244
+  Percentage of Gamers: 96%
+  Ratio: 1.01
   TA: '30'
   Tags:
   - Offline Game Mode
@@ -315,33 +315,33 @@ Base Game Achievements:
   Description: Cross a 3-way tile for the first time
   GS: '90'
   Guide: false
-  Number of Gamers: 111
-  Percentage of Gamers: 80%
-  Ratio: 1.07
-  TA: '96'
+  Number of Gamers: 231
+  Percentage of Gamers: 91%
+  Ratio: 1.04
+  TA: '93'
   Tags:
   - Offline Game Mode
   - Single Player
-Base Ratio: 1.042
-Base TA: 1042
+Base Ratio: 1.021
+Base TA: 1021
 Delisted: false
 Developer: AFIL Games
 Game Name: 'Mystic Pathways: Crystal Quest (Xbox One)'
 Genres: Puzzle
 Install Size: 455.0
-Number of Completions: 37
-Number of Gamers: 139
+Number of Completions: 187
+Number of Gamers: 255
 Overall Completion Time:
 - 0.0
 - 1.0
 Overall GS: 2000
-Overall Ratio: 2.186
-Overall TA: 4372
+Overall Ratio: 1.055
+Overall TA: 2110
 PDU: 0
-Percentage Completed: 26.62
+Percentage Completed: 73.33
 Publisher: AFIL Games
-Release Date: Tomorrow
+Release Date: Yesterday
 Server Closure: false
-Site Rating: 3.5
+Site Rating: 2.61
 Update Achievements: []
 Walkthrough: false
