--- a/game_data/Recycle-Bin-Battle.yaml
+++ b/game_data/Recycle-Bin-Battle.yaml
@@ -3,50 +3,50 @@ Add On Achievements:
   Description: kill a total of 70 kaiju over the game
   GS: '200'
   Guide: false
-  Number of Gamers: 1
+  Number of Gamers: 5
   Percentage of Gamers: 100%
-  Ratio: 2.46
-  TA: '493'
+  Ratio: 1.67
+  TA: '334'
   Tags: []
 - Achievement Name: kaiju killer level 80
   Description: kill a total of 80 kaiju over the game
   GS: '200'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 100%
-  Ratio: 2.46
-  TA: '493'
+  Number of Gamers: 4
+  Percentage of Gamers: 80%
+  Ratio: 1.86
+  TA: '373'
   Tags: []
 - Achievement Name: Recycle man level 6500
   Description: you have to make combos with 6500 rubishes
   GS: '200'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 100%
-  Ratio: 2.46
-  TA: '493'
+  Number of Gamers: 4
+  Percentage of Gamers: 80%
+  Ratio: 1.86
+  TA: '373'
   Tags: []
 - Achievement Name: brick breaker level 2025
   Description: you have to break a total of 2025 bricks over the game
   GS: '200'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 100%
-  Ratio: 2.46
-  TA: '493'
+  Number of Gamers: 4
+  Percentage of Gamers: 80%
+  Ratio: 1.86
+  TA: '373'
   Tags: []
 - Achievement Name: Recycle man level 6666
   Description: you have to make combos with 6666 rubishes
   GS: '200'
   Guide: false
-  Number of Gamers: 1
-  Percentage of Gamers: 100%
-  Ratio: 2.46
-  TA: '493'
+  Number of Gamers: 4
+  Percentage of Gamers: 80%
+  Ratio: 1.86
+  TA: '373'
   Tags: []
 Base Completion Time:
+- 8
 - 9
-- 10
 Base GS: 2000
 Base Game Achievements:
 - Achievement Name: Nuclear
@@ -54,8 +54,8 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 24
-  Percentage of Gamers: 63%
-  Ratio: 1.24
+  Percentage of Gamers: 62%
+  Ratio: 1.27
   TA: '12'
   Tags: []
 - Achievement Name: Mini Mini
@@ -63,9 +63,9 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 13
-  Percentage of Gamers: 34%
-  Ratio: 1.68
-  TA: '16'
+  Percentage of Gamers: 33%
+  Ratio: 1.73
+  TA: '17'
   Tags: []
 - Achievement Name: Crazy up down
   Description: You activate the inverse screen malus
@@ -73,24 +73,24 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 7
   Percentage of Gamers: 18%
-  Ratio: 2.29
-  TA: '22'
+  Ratio: 2.36
+  TA: '23'
   Tags: []
 - Achievement Name: This is arcade
   Description: Play arcade mode
   GS: '10'
   Guide: false
-  Number of Gamers: 30
-  Percentage of Gamers: 79%
-  Ratio: 1.11
+  Number of Gamers: 32
+  Percentage of Gamers: 82%
+  Ratio: 1.1
   TA: '11'
   Tags: []
 - Achievement Name: What a story!
   Description: Play story mode
   GS: '10'
   Guide: false
-  Number of Gamers: 36
-  Percentage of Gamers: 95%
+  Number of Gamers: 38
+  Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '10'
   Tags: []
@@ -98,35 +98,35 @@ Base Game Achievements:
   Description: You play time attack mode for the first time
   GS: '10'
   Guide: false
-  Number of Gamers: 22
-  Percentage of Gamers: 58%
-  Ratio: 1.29
-  TA: '12'
+  Number of Gamers: 23
+  Percentage of Gamers: 59%
+  Ratio: 1.3
+  TA: '13'
   Tags: []
 - Achievement Name: Try to beat the time!
   Description: You play score attack mode for the first time
   GS: '10'
   Guide: false
-  Number of Gamers: 22
-  Percentage of Gamers: 58%
-  Ratio: 1.29
-  TA: '12'
+  Number of Gamers: 23
+  Percentage of Gamers: 59%
+  Ratio: 1.3
+  TA: '13'
   Tags: []
 - Achievement Name: Who is the best?
   Description: Look at the high scores table
   GS: '10'
   Guide: false
-  Number of Gamers: 23
-  Percentage of Gamers: 61%
-  Ratio: 1.26
+  Number of Gamers: 25
+  Percentage of Gamers: 64%
+  Ratio: 1.24
   TA: '12'
   Tags: []
 - Achievement Name: First combo
   Description: Make your first rubbish combo
   GS: '10'
   Guide: false
-  Number of Gamers: 37
-  Percentage of Gamers: 97%
+  Number of Gamers: 39
+  Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '10'
   Tags: []
@@ -134,8 +134,8 @@ Base Game Achievements:
   Description: Make 10 combos
   GS: '10'
   Guide: false
-  Number of Gamers: 34
-  Percentage of Gamers: 89%
+  Number of Gamers: 36
+  Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '10'
   Tags: []
@@ -144,8 +144,8 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 20
-  Percentage of Gamers: 53%
-  Ratio: 1.36
+  Percentage of Gamers: 51%
+  Ratio: 1.39
   TA: '13'
   Tags: []
 - Achievement Name: Combo master
@@ -153,16 +153,16 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 17
-  Percentage of Gamers: 45%
-  Ratio: 1.47
-  TA: '14'
+  Percentage of Gamers: 44%
+  Ratio: 1.51
+  TA: '15'
   Tags: []
 - Achievement Name: First block
   Description: Break 1 block
   GS: '10'
   Guide: false
-  Number of Gamers: 33
-  Percentage of Gamers: 87%
+  Number of Gamers: 35
+  Percentage of Gamers: 90%
   Ratio: 1.05
   TA: '10'
   Tags: []
@@ -170,8 +170,8 @@ Base Game Achievements:
   Description: Break 10 blocks
   GS: '10'
   Guide: false
-  Number of Gamers: 32
-  Percentage of Gamers: 84%
+  Number of Gamers: 34
+  Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '10'
   Tags: []
@@ -180,8 +180,8 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 18
-  Percentage of Gamers: 47%
-  Ratio: 1.43
+  Percentage of Gamers: 46%
+  Ratio: 1.47
   TA: '14'
   Tags: []
 - Achievement Name: Blocks master
@@ -189,16 +189,16 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 16
-  Percentage of Gamers: 42%
-  Ratio: 1.52
+  Percentage of Gamers: 41%
+  Ratio: 1.56
   TA: '15'
   Tags: []
 - Achievement Name: Kaiju hunter
   Description: Kill the first Kaiju
   GS: '10'
   Guide: false
-  Number of Gamers: 32
-  Percentage of Gamers: 84%
+  Number of Gamers: 34
+  Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '10'
   Tags: []
@@ -207,25 +207,25 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 15
-  Percentage of Gamers: 39%
-  Ratio: 1.57
-  TA: '15'
+  Percentage of Gamers: 38%
+  Ratio: 1.61
+  TA: '16'
   Tags: []
 - Achievement Name: I can use this?
   Description: Buy your first bonus
   GS: '10'
   Guide: false
-  Number of Gamers: 31
+  Number of Gamers: 32
   Percentage of Gamers: 82%
-  Ratio: 1.09
-  TA: '10'
+  Ratio: 1.1
+  TA: '11'
   Tags: []
 - Achievement Name: Just the beginning
   Description: Make 100 points
   GS: '10'
   Guide: false
-  Number of Gamers: 34
-  Percentage of Gamers: 89%
+  Number of Gamers: 36
+  Percentage of Gamers: 92%
   Ratio: 1.04
   TA: '10'
   Tags: []
@@ -234,9 +234,9 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 19
-  Percentage of Gamers: 50%
-  Ratio: 1.39
-  TA: '13'
+  Percentage of Gamers: 49%
+  Ratio: 1.43
+  TA: '14'
   Tags: []
 - Achievement Name: Ok you know how to make points
   Description: Make 3000 points
@@ -244,33 +244,33 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 8
   Percentage of Gamers: 21%
-  Ratio: 2.15
-  TA: '21'
+  Ratio: 2.2
+  TA: '22'
   Tags: []
 - Achievement Name: One more coin
   Description: You choose to try again
   GS: '10'
   Guide: false
-  Number of Gamers: 31
+  Number of Gamers: 32
   Percentage of Gamers: 82%
-  Ratio: 1.09
-  TA: '10'
+  Ratio: 1.1
+  TA: '11'
   Tags: []
 - Achievement Name: The beginning of fortune
   Description: You earn 50 yen
   GS: '10'
   Guide: false
-  Number of Gamers: 31
+  Number of Gamers: 32
   Percentage of Gamers: 82%
-  Ratio: 1.09
-  TA: '10'
+  Ratio: 1.1
+  TA: '11'
   Tags: []
 - Achievement Name: Money lover
   Description: You earn 100 yen
   GS: '10'
   Guide: false
-  Number of Gamers: 32
-  Percentage of Gamers: 84%
+  Number of Gamers: 34
+  Percentage of Gamers: 87%
   Ratio: 1.07
   TA: '10'
   Tags: []
@@ -279,26 +279,26 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 26
-  Percentage of Gamers: 68%
-  Ratio: 1.19
-  TA: '11'
+  Percentage of Gamers: 67%
+  Ratio: 1.22
+  TA: '12'
   Tags: []
 - Achievement Name: Stingy player
   Description: You earn 1000 yen
   GS: '10'
   Guide: false
   Number of Gamers: 19
-  Percentage of Gamers: 50%
-  Ratio: 1.39
-  TA: '13'
+  Percentage of Gamers: 49%
+  Ratio: 1.43
+  TA: '14'
   Tags: []
 - Achievement Name: What was that
   Description: You see the first video message
   GS: '10'
   Guide: false
   Number of Gamers: 21
-  Percentage of Gamers: 55%
-  Ratio: 1.32
+  Percentage of Gamers: 54%
+  Ratio: 1.36
   TA: '13'
   Tags: []
 - Achievement Name: Do I understand?
@@ -306,8 +306,8 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 16
-  Percentage of Gamers: 42%
-  Ratio: 1.52
+  Percentage of Gamers: 41%
+  Ratio: 1.56
   TA: '15'
   Tags: []
 - Achievement Name: Great, I got it
@@ -315,53 +315,53 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 9
-  Percentage of Gamers: 24%
-  Ratio: 2.02
+  Percentage of Gamers: 23%
+  Ratio: 2.08
   TA: '20'
   Tags: []
 - Achievement Name: The end?
   Description: You see the end?
   GS: '10'
   Guide: false
-  Number of Gamers: 3
-  Percentage of Gamers: 8%
-  Ratio: 3.51
-  TA: '35'
+  Number of Gamers: 4
+  Percentage of Gamers: 10%
+  Ratio: 3.12
+  TA: '31'
   Tags: []
 - Achievement Name: The end!!!!
   Description: You see the end!
   GS: '10'
   Guide: false
-  Number of Gamers: 3
-  Percentage of Gamers: 8%
-  Ratio: 3.51
-  TA: '35'
+  Number of Gamers: 4
+  Percentage of Gamers: 10%
+  Ratio: 3.12
+  TA: '31'
   Tags: []
 - Achievement Name: Kaiju killer level 10
   Description: Kill a total of 10 Kaiju over the game
   GS: '10'
   Guide: false
   Number of Gamers: 19
-  Percentage of Gamers: 50%
-  Ratio: 1.39
-  TA: '13'
+  Percentage of Gamers: 49%
+  Ratio: 1.43
+  TA: '14'
   Tags: []
 - Achievement Name: Kaiju killer level 20
   Description: Kill a total of 20 Kaiju over the game
   GS: '10'
   Guide: false
   Number of Gamers: 12
-  Percentage of Gamers: 32%
-  Ratio: 1.75
-  TA: '17'
+  Percentage of Gamers: 31%
+  Ratio: 1.8
+  TA: '18'
   Tags: []
 - Achievement Name: Kaiju killer level 30
   Description: Kill a total of 30 Kaiju over the game
   GS: '10'
   Guide: false
   Number of Gamers: 11
-  Percentage of Gamers: 29%
-  Ratio: 1.83
+  Percentage of Gamers: 28%
+  Ratio: 1.88
   TA: '18'
   Tags: []
 - Achievement Name: Kaiju killer level 40
@@ -369,9 +369,9 @@ Base Game Achievements:
   GS: '20'
   Guide: false
   Number of Gamers: 9
-  Percentage of Gamers: 24%
-  Ratio: 2.02
-  TA: '40'
+  Percentage of Gamers: 23%
+  Ratio: 2.08
+  TA: '41'
   Tags: []
 - Achievement Name: Kaiju killer level 50
   Description: Kill a total of 50 Kaiju over the game
@@ -379,25 +379,25 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 8
   Percentage of Gamers: 21%
-  Ratio: 2.15
-  TA: '107'
+  Ratio: 2.2
+  TA: '110'
   Tags: []
 - Achievement Name: Recycle man level 100
   Description: You use a total of 100 Rubishes over the game
   GS: '10'
   Guide: false
   Number of Gamers: 31
-  Percentage of Gamers: 82%
-  Ratio: 1.09
-  TA: '10'
+  Percentage of Gamers: 79%
+  Ratio: 1.12
+  TA: '11'
   Tags: []
 - Achievement Name: Recycle man level 200
   Description: You use a total of 200 Rubishes over the game
   GS: '10'
   Guide: false
   Number of Gamers: 28
-  Percentage of Gamers: 74%
-  Ratio: 1.14
+  Percentage of Gamers: 72%
+  Ratio: 1.18
   TA: '11'
   Tags: []
 - Achievement Name: Recycle man level 500
@@ -405,18 +405,18 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 22
-  Percentage of Gamers: 58%
-  Ratio: 1.29
-  TA: '12'
+  Percentage of Gamers: 56%
+  Ratio: 1.33
+  TA: '13'
   Tags: []
 - Achievement Name: Recycle man level 1000
   Description: You use a total of 1000 Rubishes over the game
   GS: '20'
   Guide: false
   Number of Gamers: 15
-  Percentage of Gamers: 39%
-  Ratio: 1.57
-  TA: '31'
+  Percentage of Gamers: 38%
+  Ratio: 1.61
+  TA: '32'
   Tags: []
 - Achievement Name: Recycle man level 2000
   Description: You use a total of 2000 Rubishes over the game
@@ -424,25 +424,25 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 10
   Percentage of Gamers: 26%
-  Ratio: 1.92
-  TA: '96'
+  Ratio: 1.97
+  TA: '98'
   Tags: []
 - Achievement Name: Brick breaker level 100
   Description: You have to break a total of 100 bricks over the game
   GS: '10'
   Guide: false
   Number of Gamers: 22
-  Percentage of Gamers: 58%
-  Ratio: 1.29
-  TA: '12'
+  Percentage of Gamers: 56%
+  Ratio: 1.33
+  TA: '13'
   Tags: []
 - Achievement Name: Brick breaker level 200
   Description: You have to break a total of 200 bricks over the game
   GS: '10'
   Guide: false
   Number of Gamers: 20
-  Percentage of Gamers: 53%
-  Ratio: 1.36
+  Percentage of Gamers: 51%
+  Ratio: 1.39
   TA: '13'
   Tags: []
 - Achievement Name: Brick breaker level 300
@@ -450,8 +450,8 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 16
-  Percentage of Gamers: 42%
-  Ratio: 1.52
+  Percentage of Gamers: 41%
+  Ratio: 1.56
   TA: '15'
   Tags: []
 - Achievement Name: Brick breaker level 500
@@ -459,35 +459,35 @@ Base Game Achievements:
   GS: '20'
   Guide: false
   Number of Gamers: 12
-  Percentage of Gamers: 32%
-  Ratio: 1.75
-  TA: '35'
+  Percentage of Gamers: 31%
+  Ratio: 1.8
+  TA: '36'
   Tags: []
 - Achievement Name: Brick breaker level 700
   Description: You have to break a total of 700 bricks over the game
   GS: '50'
   Guide: false
   Number of Gamers: 11
-  Percentage of Gamers: 29%
-  Ratio: 1.83
-  TA: '91'
+  Percentage of Gamers: 28%
+  Ratio: 1.88
+  TA: '94'
   Tags: []
 - Achievement Name: Money lover level 1000
   Description: You have to win 1000 Yens over the game
   GS: '10'
   Guide: false
   Number of Gamers: 26
-  Percentage of Gamers: 68%
-  Ratio: 1.19
-  TA: '11'
+  Percentage of Gamers: 67%
+  Ratio: 1.22
+  TA: '12'
   Tags: []
 - Achievement Name: Money lover level 2000
   Description: You have to win 2000 Yens over the game
   GS: '10'
   Guide: false
   Number of Gamers: 21
-  Percentage of Gamers: 55%
-  Ratio: 1.32
+  Percentage of Gamers: 54%
+  Ratio: 1.36
   TA: '13'
   Tags: []
 - Achievement Name: Money lover level 5000
@@ -495,18 +495,18 @@ Base Game Achievements:
   GS: '10'
   Guide: false
   Number of Gamers: 13
-  Percentage of Gamers: 34%
-  Ratio: 1.68
-  TA: '16'
+  Percentage of Gamers: 33%
+  Ratio: 1.73
+  TA: '17'
   Tags: []
 - Achievement Name: Money lover level 10000
   Description: You have to win 10000 Yens over the game
   GS: '20'
   Guide: false
   Number of Gamers: 11
-  Percentage of Gamers: 29%
-  Ratio: 1.83
-  TA: '36'
+  Percentage of Gamers: 28%
+  Ratio: 1.88
+  TA: '37'
   Tags: []
 - Achievement Name: Money lover level 20000
   Description: You have to win 20000 Yens over the game
@@ -514,26 +514,26 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 8
   Percentage of Gamers: 21%
-  Ratio: 2.15
-  TA: '107'
+  Ratio: 2.2
+  TA: '110'
   Tags: []
 - Achievement Name: Recycle man level 3000
   Description: You use a total of 3000 Rubishes over the game
   GS: '50'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 18%
-  Ratio: 2.29
-  TA: '114'
+  Number of Gamers: 8
+  Percentage of Gamers: 21%
+  Ratio: 2.2
+  TA: '110'
   Tags: []
 - Achievement Name: Recycle man level 5000
   Description: You use a total of 5000 Rubishes over the game
   GS: '60'
   Guide: false
   Number of Gamers: 6
-  Percentage of Gamers: 16%
-  Ratio: 2.48
-  TA: '148'
+  Percentage of Gamers: 15%
+  Ratio: 2.54
+  TA: '152'
   Tags: []
 - Achievement Name: Brick breaker level 1000
   Description: You have to break a total of 1000 bricks over the game
@@ -541,44 +541,44 @@ Base Game Achievements:
   Guide: false
   Number of Gamers: 8
   Percentage of Gamers: 21%
-  Ratio: 2.15
-  TA: '107'
+  Ratio: 2.2
+  TA: '110'
   Tags: []
 - Achievement Name: Brick breaker level 1500
   Description: You have to break a total of 1500 bricks over the game
   GS: '60'
   Guide: false
-  Number of Gamers: 7
-  Percentage of Gamers: 18%
-  Ratio: 2.29
-  TA: '137'
+  Number of Gamers: 8
+  Percentage of Gamers: 21%
+  Ratio: 2.2
+  TA: '132'
   Tags: []
 - Achievement Name: Money lover level 50000
   Description: You have to win 50000 Yens over the game
   GS: '60'
   Guide: false
   Number of Gamers: 6
-  Percentage of Gamers: 16%
-  Ratio: 2.48
-  TA: '148'
+  Percentage of Gamers: 15%
+  Ratio: 2.54
+  TA: '152'
   Tags: []
-Base Ratio: 2.021
-Base TA: 4042
+Base Ratio: 2.0435
+Base TA: 4087
 Delisted: false
 Developer: overGame Studio
 Game Name: Recycle Bin Battle
 Genres: Puzzle
 Install Size: 1670.0
-Number of Completions: 1
-Number of Gamers: 38
+Number of Completions: 3
+Number of Gamers: 39
 Overall Completion Time:
+- 8
 - 9
-- 10
 Overall GS: 3000
-Overall Ratio: 2.1693333333333333
-Overall TA: 6508
+Overall Ratio: 1.971
+Overall TA: 5913
 PDU: 0
-Percentage Completed: 2.63
+Percentage Completed: 7.69
 Publisher: overGame Studio
 Release Date: 14 May 2025
 Server Closure: false
@@ -588,10 +588,10 @@ Update Achievements:
   Description: you look at the tutorial
   GS: '200'
   Guide: false
-  Number of Gamers: 20
-  Percentage of Gamers: 53%
-  Ratio: 1.36
-  TA: '272'
+  Number of Gamers: 22
+  Percentage of Gamers: 56%
+  Ratio: 1.33
+  TA: '266'
   Tags: []
 - Achievement Name: Recycle man level 6000
   Description: you have to make combos with 6000 rubishes
@@ -599,17 +599,17 @@ Update Achievements:
   Guide: false
   Number of Gamers: 5
   Percentage of Gamers: 13%
-  Ratio: 2.72
-  TA: '544'
+  Ratio: 2.79
+  TA: '558'
   Tags: []
 - Achievement Name: money lover level 55000
   Description: you have to win 55000 Yens over the game
   GS: '200'
   Guide: false
   Number of Gamers: 6
-  Percentage of Gamers: 16%
-  Ratio: 2.48
-  TA: '496'
+  Percentage of Gamers: 15%
+  Ratio: 2.54
+  TA: '509'
   Tags: []
 - Achievement Name: brick breaker level 2000
   Description: you have to break a total of 2000 bricks over the game
@@ -617,16 +617,16 @@ Update Achievements:
   Guide: false
   Number of Gamers: 7
   Percentage of Gamers: 18%
-  Ratio: 2.29
-  TA: '459'
+  Ratio: 2.36
+  TA: '472'
   Tags: []
 - Achievement Name: kaiju killer level 60
   Description: kill a total of 60 kaiju over the game
   GS: '200'
   Guide: true
-  Number of Gamers: 7
-  Percentage of Gamers: 18%
-  Ratio: 2.29
-  TA: '459'
+  Number of Gamers: 8
+  Percentage of Gamers: 21%
+  Ratio: 2.2
+  TA: '441'
   Tags: []
 Walkthrough: false
